@@ -972,8 +972,13 @@
 
 	<target name="installAddons">
 		<copy todir="../${project}/web" overwrite="true">
-			<fileset dir="../Addons/web"/>
+			<fileset dir="../Addons/web" excludes="naviox/firstSteps.jsp,naviox/welcome.jsp"/>
 		</copy>
+		<copy todir="../${project}/web">
+			<fileset dir="../Addons/web" includes="naviox/firstSteps.jsp,naviox/welcome.jsp">
+				<present present="srconly" targetdir="../${project}/web" />
+			</fileset>
+		</copy>				
 		<copy todir="../${project}/properties">
 			<fileset dir="../Addons/properties-templates">
 				<present present="srconly" targetdir="../${project}/properties" />
